Added cursor on hover of radio btns

--- a/styles/newspage.css
+++ b/styles/newspage.css
@@ -90,7 +90,8 @@ body {
 	flex-direction: column;
 	gap: 0.3rem;
 }
-#quiz .options .option label:hover {
+#quiz .options .option label:hover,
+#quiz .options input:hover {
 	cursor: pointer;
 }
 #quiz .control {
