--- a/styles/home.css
+++ b/styles/home.css
@@ -2,8 +2,14 @@
 	margin: 0;
 	padding: 0;
 	font-family: Poppins;
+	scrollbar-color: unset;
+	scrollbar-width: none;
 }
 nav {
+	position: sticky;
+	top: 0px;
+	z-index: 10;
+	background-color: #ffffff;
 	width: 100vw;
 	height: 100px;
 	display: flex;
@@ -11,7 +17,8 @@ nav {
 	align-items: center;
 	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
-nav > #logo {
+nav > #text-logo {
+	margin-left: 2.5rem;
 	color: #0047cc;
 }
 nav > #cta-buttons {
@@ -19,15 +26,34 @@ nav > #cta-buttons {
 }
 #cta-buttons button {
 	padding: 10px 30px;
-	border: 1px solid #0047cc;
+	border: 2px solid #0047cc;
 	background: none;
 	border-radius: 50px;
-	color: black;
+	color: #0047cc;
 	font-weight: 500;
+	transition: all 0.25s;
 }
 #cta-buttons button:hover {
 	cursor: pointer;
 	text-decoration: underline;
 	background-color: #0047cc;
 	color: white;
+}
+
+/* Responsiveness design */
+@media screen and (min-width: 1500px) {
+	nav {
+		justify-content: center;
+		gap: 25vw;
+	}
+}
+@media screen and (max-width: 425px) {
+	nav {
+		flex-direction: column;
+		justify-content: center;
+		gap: 0.4rem;
+	}
+	nav > #text-logo {
+		margin-left: 0;
+	}
 }
