--- a/styles/home.css
+++ b/styles/home.css
@@ -72,7 +72,7 @@ nav > #cta-buttons {
 	width: 30px;
 }
 .left-side {
-	background-image: url("/images/Overwhelmed-cuate.svg");
+	background-image: url("./images/Overwhelmed-cuate.svg");
 	background-repeat: no-repeat;
 	height: 30rem;
 	width: 30rem;
